[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Stage.gd" type="Script" id=1]
[ext_resource path="res://src/ControlCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/stagebackgrounds/basebg.png" type="Texture" id=3]
[ext_resource path="res://src/FollowCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Character.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/kick_test.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Debug.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://src/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/WinMenu.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 9 )

[node name="Stage" type="Node"]
script = ExtResource( 1 )
bpm = 128

[node name="ControlCharacter" parent="." instance=ExtResource( 2 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 99.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PostWinTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="StageBackground" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="PlayersAndCam" type="Node" parent="."]

[node name="FollowCamera" parent="PlayersAndCam" instance=ExtResource( 4 )]
limit_left = 0
limit_top = 0
limit_right = 3600
limit_bottom = 2025
editor_draw_limits = true

[node name="Player1" parent="PlayersAndCam" instance=ExtResource( 5 )]
position = Vector2( 200, 1510 )
scale = Vector2( 10, 10 )

[node name="Player2" parent="PlayersAndCam" instance=ExtResource( 5 )]
modulate = Color( 0.0583649, 0.628898, 0.878906, 1 )
position = Vector2( 3400, 1510 )
scale = Vector2( 10, 10 )

[node name="Position0" type="Position2D" parent="."]
position = Vector2( 200, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 600, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position2" type="Position2D" parent="."]
position = Vector2( 1000, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position3" type="Position2D" parent="."]
position = Vector2( 1400, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position4" type="Position2D" parent="."]
position = Vector2( 1800, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position5" type="Position2D" parent="."]
position = Vector2( 2200, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position6" type="Position2D" parent="."]
position = Vector2( 2600, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position7" type="Position2D" parent="."]
position = Vector2( 3000, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position8" type="Position2D" parent="."]
position = Vector2( 3400, 1510 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Debug" parent="CanvasLayer" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -386.0
margin_top = -116.0
margin_right = 0.0
margin_bottom = 0.0

[node name="StartTimerLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -84.5
margin_right = 257.0
margin_bottom = 84.5
custom_fonts/font = SubResource( 1 )
text = "Round begins in:
5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 10 )]
pause_mode = 2
visible = false

[node name="WinMenu" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PostWinTimer" to="." method="_on_PostWinTimer_timeout"]
